# CompressedInts

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
cmake/: prelude.cmake  variables.cmake
include/compressedInts/: compressedInts.hpp  utils.hpp
tests/: CMakeLists.txt  compressedInts_test.cpp
